# svg-panel

./: .flake8  .pre-commit-config.yaml  README.md  svg-panel.py
py/: .gitignore  README.md  bootstrap  pyproject.toml
py/svgpanel/: svgpanel.py
