[tool.poetry]
name = "svgpanel"
version = "0.0.1"
description = "SVG panel"
authors = ["Todd Lesher <toddleser@users.noreply.github.com>"]
readme = "README.md"
#packages = [
#  { include = "nh" }
#]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.0"
pydantic = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.0.4"
pytest-httpx = "^0.21.3"
svgwrite = "^1.4.3"
starlette = "^0.26.1"
pytest-timeout = "^2.1.0"

[tool.poetry.scripts]
charger2-provision = "nh.indigo.charger.provision.provision:main"

[tool.isort]
profile = "black"
force_single_line = true
force_sort_within_sections = true
single_line_exclusions = ["typing"]

[tool.pyright]
# Tell pyright to use our .venv environment.
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
# By default, set a time limit of 30 seconds for each test. This is mostly to
# catch hanging tests, as we should be aiming for sub-second tests generally,
# and a few seconds perhaps for complex regression tests.
timeout = 30

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
